--- a/index.html
+++ b/index.html
@@ -146,7 +146,12 @@
 									</ul>
 								</form>
 							</section>
-							
+							<section class="split">
+								<h4>My Opinion</h4>
+								<p>I recently watched AI for Education by Sal Khan, a TED talk from last year, in which he discussed how AI can transform the world by providing extra support to students through Khan Academy's new AI-powered bot, Khanmigo. This smart tutor can help with problems across various subjects and contexts with great ease. It also includes a teacher version, where educators can access explanations, generate reports, and plan lessons. This allows teachers to spend more time with students one-on-one.
+
+									AI can be a boon or a bane; it depends on how we use it and ensure it remains secure so that it doesn't fall into the wrong hands.</p>
+							</section>
 						</div>
 					</section>
 
